--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.1.4"
+    "@astrojs/react": "^3.0.2",
+    "@react-pdf/renderer": "^3.1.12",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^3.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
